--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="course-discount">
+          <p class="course-text">
+            <span class="course-spn">Skills that give you confidence |</span>
+            Achieve your career goals with courses from $9.99. Ends May 22. <br>
+            <span class="course-spn">3 days left!</span>
+          </p>
+        </div>
+      </div>
+    </header>
+
     <script src="/js/input.js"></script>
     <script src="/js/product.js"></script>
     <script src="/js/index.js"></script>
-</body>
+  </body>
 </html>
