index.html faylga o'zgartirish kiritildi

--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,25 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="course-discount">
-          <p class="course-text">
-            <span class="course-spn">Skills that give you confidence |</span>
-            Achieve your career goals with courses from $9.99. Ends May 22. <br>
-            <span class="course-spn">3 days left!</span>
-          </p>
+        <div class="header__wrapper">
+          <div class="course-discount">
+            <p class="course-text">
+              <span class="course-spn">Skills that give you confidence |</span>
+              Achieve your career goals with courses from $9.99. Ends May 22.
+              <br />
+              <span class="course-spn">3 days left!</span>
+            </p>
+          </div>
+          <div class="header__main">
+            <a href="#" class="header__link-pic">
+              <img
+                src="../assets/course logo.svg"
+                alt="alt"
+                class="header__pic"
+              />
+            </a>
+            <a href="#" class="header__explore"> Explore </a>
+          </div>
         </div>
       </div>
     </header>
