--- a/html/detail.html
+++ b/html/detail.html
@@ -8,8 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+    </header>
+    <main>
+      
+    </main>
     <footer></footer>
     <script src="/js/input.js"></script>
     <script src="/js/product.js"></script>
