--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,74 @@
 
     </header>
     <main>
+  <section>
+            <div class="container">
+                <div class="top-reload-wrapper">
+                    <p class="top-reload bold">There was a problem loading course recommendations</p>
+                    <p class="top-reload-text">Please reload the page to resolve this issue</p>
+                    <div class="top-reload-buttons">
+                        <button class="top-reload-button">Reload Page</button>
+                        <button class="top-reload-button nob">Dismiss</button>
+                    </div>
 
+                </div>
+
+                <div class="bottom-reload-wrapper">
+                    <img src="/Div [skeleton_skeleton__VODJ7].svg" alt="" class="bottom-reload-img">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="focus-wrapper-main">
+<div class="focus-left">
+                    <h1 class="focus-title">Learning focused on your goals</h1>
+                    <div class="focus-wrapper">
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+</div>
+<div class="focus-right">
+    <img src="/Image.svg" alt="" class="focus-right-img">
+
+</div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
