--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>undemy</title>
-    <link rel="shortcut icon" href="../assets/course logo.svg" type="image/x-icon">
+
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-   
+    <header class="header">
+      <div class="header__wrapper">
+        <div class="header__topColor">
+          <div class="container">
+            <div class="course-discount">
+              <p class="course-text">
+                <span class="course-spn"
+                  >Skills that give you confidence |</span
+                >
+                Achieve your career goals with courses from $9.99. Ends May 22.
+                <br />
+                <span class="course-spn">3 days left!</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="header__main">
+          <a href="#" class="header__link-pic">
+            <img
+              src="../assets/course logo.svg"
+              alt="alt"
+              class="header__pic"
+            />
+          </a>
+          <a href="#" class="header__explore"> Explore </a>
 
-
+          <input type="text" name="input" id="headerInput" />
+          <ul class="header__menu">
+            <li class="header__list">
+              <a href="#" class="header__link">Plans & Pricing</a>
+            </li>
+            <li class="header__list">
+              <a href="#" class="header__link">Udemy Business</a>
+            </li>
+            <li class="header__list">
+              <a href="#" class="header__link">Teach on Udemy</a>
+            </li>
+          </ul>
+          <div class="header__btns">
+            <button class="header__login">Log in</button>
+            <button class="header__signup">Sign up</button>
+            <button class="header__space-btn">A</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero__wrapper">
+            <div class="hero__skills-box">
+              <h1 class="hero__title">
+                Skills that transform <br />
+                your career
+              </h1>
+              <p class="hero__text">
+                Our biggest sale of the season is here. Stock up on courses for
+                as low as $9.99 each. Sale ends May 22.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="reimagine">
+        <div class="container">
+          <h2 class="reimagine__title">Ready to reimagine your career?</h2>
+          <p class="reimagine__text">
+            Get the skills and real-world experience employers want with Career
+            Accelerators.
+          </p>
+          <ul class="reimagine__menu-boxes">
+            <li class="reimagine__list-box">
+              
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <script src="/js/input.js"></script>
     <script src="/js/product.js"></script>
     <script src="/js/index.js"></script>
