--- a/html/signUp.html
+++ b/html/signUp.html
@@ -4,35 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Validation</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     
-  <form id="myForm">
-    <h2>Register</h2>
-
-    <div class="wrapper_signUp">
+  <form id="signupForm">
     <label>
       Name:
-      <input type="text" id="name" />
-      <span class="error" id="nameError"></span>
+      <input type="text" id="name" required>
+      <small class="error" id="nameError"></small>
     </label>
-
+  
     <label>
       Email:
-      <input type="email" id="email" />
-      <span class="error" id="emailError"></span>
+      <input type="email" id="email" required>
+      <small class="error" id="emailError"></small>
     </label>
-
+    
     <label>
       Password:
-      <input type="password" id="password" />
-      <span class="error" id="passwordError"></span>
+      <input type="password" id="password" required>
+      <small class="error" id="passwordError"></small>
     </label>
-
-    <button type="submit">Submit</button>
-</div>
+  
+    <label>
+      Confirm Password:
+      <input type="password" id="confirmPassword" required>
+      <small class="error" id="confirmError"></small>
+    </label>
+  
+    <button class="signup-button clean" type="submit">Sign Up</button>
   </form>
+  
 
   <script src="../js/product.js"></script>
 </body>
