kop narsa qushildi

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>undemy</title>
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -18,7 +21,7 @@
                   >Skills that give you confidence |</span
                 >
                 Achieve your career goals with courses from $9.99. Ends May 22.
-                <br />
+                <br class="br" />
                 <span class="course-spn">3 days left!</span>
               </p>
             </div>
@@ -46,10 +49,10 @@
               <a href="#" class="header__link">Teach on Udemy</a>
             </li>
           </ul>
+          <i class="bi bi-list"></i>
           <div class="header__btns">
             <button class="header__login">Log in</button>
             <button class="header__signup">Sign up</button>
-            <button class="header__space-btn">A</button>
           </div>
         </div>
       </div>
@@ -80,9 +83,86 @@
           </p>
           <ul class="reimagine__menu-boxes">
             <li class="reimagine__list-box">
-              
+              <img src="/assets/coding men.png" alt="" class="reimange__img" />
+              <div class="reim__listbox-bottom">
+                <h3 class="reim__listbox-title">Full Stack Web Developer</h3>
+                <p class="reim__listbox-text">
+                  $127,005 average salary (US)•16,500 open roles (US)
+                </p>
+                <div class="reim__listbox-texts">
+                  <p class="listbox-text">4.7</p>
+                  <p class="listbox-text">442K ratings</p>
+                  <p class="listbox-text">87.6 total hours</p>
+                </div>
+              </div>
+            </li>
+            <li class="reimagine__list-box">
+              <img src="/assets/coding lasy.png" alt="" class="reimange__img" />
+              <div class="reim__listbox-bottom">
+                <h3 class="reim__listbox-title">Digital Marketer</h3>
+                <p class="reim__listbox-text">
+                  $61,126 average salary (US)•36,600 open roles (US)
+                </p>
+                <div class="reim__listbox-texts">
+                  <p class="listbox-text">4.6</p>
+                  <p class="listbox-text">3.3K ratings</p>
+                  <p class="listbox-text">28.4 total hours</p>
+                </div>
+              </div>
+            </li>
+            <li class="reimagine__list-box">
+              <img src="/assets/coding boy.png" alt="" class="reimange__img" />
+              <div class="reim__listbox-bottom">
+                <h3 class="reim__listbox-title">Data Scientist</h3>
+                <p class="reim__listbox-text">
+                  $126,629 average salary (US)•20,800 open roles (US)
+                </p>
+                <div class="reim__listbox-texts">
+                  <p class="listbox-text">4.6</p>
+                  <p class="listbox-text">216K ratings</p>
+                  <p class="listbox-text">46.8 total hours</p>
+                </div>
+              </div>
             </li>
           </ul>
+          <button class="reimagine__all-accelators-btn">
+            All Career Accelerators
+          </button>
+        </div>
+      </section>
+      <section class=""></section>
+      <section class="companies">
+        <div class="container">
+          <h3 class="companies__title">
+            Trusted by over 16,000 companies and millions of learners around the
+            world
+          </h3>
+          <div class="companies__logos">
+            <a href="#" class="comapanies__link">
+              <img src="/assets/BYD.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/samsung.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/cisci.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/vimeo.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/P&G.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/hewlet.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/citi.png" alt="" class="comapanies__img" />
+            </a>
+            <a href="#" class="comapanies__link">
+              <img src="/assets/erikson.png " alt="" class="comapanies__img" />
+            </a>
+          </div>
         </div>
       </section>
     </main>
