--- a/html/index.html
+++ b/html/index.html
@@ -80,6 +80,90 @@
                 </div>
             </div>
         </section>
+        <section>
+           <div class="container">
+            <div class="gpt-wrapper">
+                <h1 class="gpt-top-title">Trending Now</h1>
+                <div class="line"></div>
+                <ul class="gpt-main">
+                   <li class="gpt-item special">
+<h1 class="gpt-item-title sp">ChatGPT is a top skill</h1>
+<div class="gpt-item-box">
+<p class="gpt-item-link">See ChatGPT courses</p>
+<p class="gpt-item-peoples">4,502,136 learners</p>
+</div>
+<button class="gpt-item-btn">Show all trending skills</button>
+                   </li>
+
+                   <li class="gpt-item smallest"><h1 class="gpt-item-title">Development</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Python</p>
+<p class="gpt-item-peoples">48,165,727 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Web Development</p>
+<p class="gpt-item-peoples">14,084,120 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">Data Science</p>
+<p class="gpt-item-peoples">7,860,822 learners</p>
+                    </div>
+                </li>
+
+                <li class="gpt-item"><h1 class="gpt-item-title">Design</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Blender</p>
+<p class="gpt-item-peoples">2,939,428 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Graphic Design</p>
+<p class="gpt-item-peoples">4,523,089 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">User Experience (UX) Design</p>
+<p class="gpt-item-peoples">2,083,324 learners</p>
+                    </div>
+                </li>
+
+                <li class="gpt-item bigger"><h1 class="gpt-item-title">Business</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">PMI Project Management Professional (PMP)</p>
+<p class="gpt-item-peoples">2,611,162 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Microsoft Power BI</p>
+<p class="gpt-item-peoples">4,707,514 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">Project Management</p>
+<p class="gpt-item-peoples">4,042,309 learners</p>
+                    </div>
+                </li>
+
+                </ul>
+
+                <div class="booz-wrapper">
+                    <div class="left">
+                        <h1 class="booz-top-title">Booz | Allen | Hamilton</h1>
+                        <h1 class="booz-title">Booz Allen Hamilton Unlocks Talent Retention and Productivity Through Upskilling</h1>
+                        <div class="booz-percentage-wrapper">
+                            <div class="booz-item"><h1 class="booz-item-percentage">93%</h1>
+                                <p class="booz-item-txt">retention rate among participating employees</p>
+                            </div>
+                            <div class="booz-item"><h1 class="booz-item-percentage">65%</h1>
+                                <p class="booz-item-txt">retention rate among participating employees</p>
+                            </div>
+                           
+                        </div>
+                         <button class="booz-btn">Read full story</button>
+                    </div>
+                    <div class="right">
+                        <img src="/Image [ub-case-study-slide_image-square__loJh8].png" alt="" class="booz-right-img">
+                    </div>
+                </div>
+            </div>
+           </div>
+        </section>
     </main>
     <footer>
 
