--- a/html/index.html
+++ b/html/index.html
@@ -1,67 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>undemy</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__wrapper">
-        <div class="header__topColor">
-          <div class="container">
-            <div class="course-discount">
-              <p class="course-text">
-                <span class="course-spn"
-                  >Skills that give you confidence |</span
-                >
-                Achieve your career goals with courses from $9.99. Ends May 22.
-                <br class="br" />
-                <span class="course-spn">3 days left!</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="header__main">
-          <a href="#" class="header__link-pic">
-            <img
-              src="../assets/course logo.svg"
-              alt="alt"
-              class="header__pic"
-            />
-          </a>
-          <a href="#" class="header__explore"> Explore </a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
 
-          <input type="text" name="input" id="headerInput" />
-          <ul class="header__menu">
-            <li class="header__list">
-              <a href="#" class="header__link">Plans & Pricing</a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">Udemy Business</a>
-            </li>
-            <li class="header__list">
-              <a href="#" class="header__link">Teach on Udemy</a>
-            </li>
-          </ul>
-          <i class="bi bi-list"></i>
-          <div class="header__btns">
-            <button class="header__login">Log in</button>
-            <button class="header__signup">Sign up</button>
-          </div>
-        </div>
-      </div>
     </header>
     <main>
+  <section>
+            <div class="container">
+                <div class="top-reload-wrapper">
+                    <p class="top-reload bold">There was a problem loading course recommendations</p>
+                    <p class="top-reload-text">Please reload the page to resolve this issue</p>
+                    <div class="top-reload-buttons">
+                        <button class="top-reload-button">Reload Page</button>
+                        <button class="top-reload-button nob">Dismiss</button>
+                    </div>
 
+                </div>
+
+                <div class="bottom-reload-wrapper">
+                    <img src="/Div [skeleton_skeleton__VODJ7].svg" alt="" class="bottom-reload-img">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="focus-wrapper-main">
+<div class="focus-left">
+                    <h1 class="focus-title">Learning focused on your goals</h1>
+                    <div class="focus-wrapper">
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+
+                        <div class="focus-item"><img src="/Image [features-tab_icon__2eVep].svg" alt="" class="focus-item-icon">
+                            <div class="focus-item-texts">
+                                <p class="focus-item-top-text">Certification prep</p>
+                                <p class="focus-item-bottom-text">Prep for industry-recognized certifications by solving real-world challenges and earn badges along the way.</p>
+                                <p class="focus-item-bottom-link">Explore courses</p>
+                            </div>
+                        </div>
+
+                        
+                    </div>
+</div>
+<div class="focus-right">
+    <img src="/Image.svg" alt="" class="focus-right-img">
+
+</div>
+                </div>
+            </div>
+        </section>
+        <section>
+           <div class="container">
+            <div class="gpt-wrapper">
+                <h1 class="gpt-top-title">Trending Now</h1>
+                <div class="line"></div>
+                <ul class="gpt-main">
+                   <li class="gpt-item special">
+<h1 class="gpt-item-title sp">ChatGPT is a top skill</h1>
+<div class="gpt-item-box">
+<p class="gpt-item-link">See ChatGPT courses</p>
+<p class="gpt-item-peoples">4,502,136 learners</p>
+</div>
+<button class="gpt-item-btn">Show all trending skills</button>
+                   </li>
+
+                   <li class="gpt-item smallest"><h1 class="gpt-item-title">Development</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Python</p>
+<p class="gpt-item-peoples">48,165,727 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Web Development</p>
+<p class="gpt-item-peoples">14,084,120 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">Data Science</p>
+<p class="gpt-item-peoples">7,860,822 learners</p>
+                    </div>
+                </li>
+
+                <li class="gpt-item"><h1 class="gpt-item-title">Design</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Blender</p>
+<p class="gpt-item-peoples">2,939,428 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Graphic Design</p>
+<p class="gpt-item-peoples">4,523,089 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">User Experience (UX) Design</p>
+<p class="gpt-item-peoples">2,083,324 learners</p>
+                    </div>
+                </li>
+
+                <li class="gpt-item bigger"><h1 class="gpt-item-title">Business</h1>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">PMI Project Management Professional (PMP)</p>
+<p class="gpt-item-peoples">2,611,162 learners</p>
+                    </div>
+                    <div class="gpt-item-box">
+                        <p class="gpt-item-link">Microsoft Power BI</p>
+<p class="gpt-item-peoples">4,707,514 learners</p>
+                    </div>
+                    <div class="gpt-item-box spm">
+                        <p class="gpt-item-link">Project Management</p>
+<p class="gpt-item-peoples">4,042,309 learners</p>
+                    </div>
+                </li>
+
+                </ul>
+
+                <div class="booz-wrapper">
+                    <div class="left">
+                        <h1 class="booz-top-title">Booz | Allen | Hamilton</h1>
+                        <h1 class="booz-title">Booz Allen Hamilton Unlocks Talent Retention and Productivity Through Upskilling</h1>
+                        <div class="booz-percentage-wrapper">
+                            <div class="booz-item"><h1 class="booz-item-percentage">93%</h1>
+                                <p class="booz-item-txt">retention rate among participating employees</p>
+                            </div>
+                            <div class="booz-item"><h1 class="booz-item-percentage">65%</h1>
+                                <p class="booz-item-txt">retention rate among participating employees</p>
+                            </div>
+                           
+                        </div>
+                         <button class="booz-btn">Read full story</button>
+                    </div>
+                    <div class="right">
+                        <img src="/Image [ub-case-study-slide_image-square__loJh8].png" alt="" class="booz-right-img">
+                    </div>
+                </div>
+            </div>
+           </div>
+        </section>
     </main>
+    <footer>
+
+    </footer>
     <script src="/js/input.js"></script>
     <script src="/js/product.js"></script>
     <script src="/js/index.js"></script>
-  </body>
+</body>
 </html>
