--- a/html/index.html
+++ b/html/index.html
@@ -673,8 +673,9 @@
     </main>
     
    
+    <script src="/js/course.js"></script>
     <script src="/js/input.js"></script>
         <script src="/js/index.js"></script>
-        <script src="/js/course.js"></script>
+        <script src="../js/signUp.js"></script>
 </body>
 </html>
