--- a/html/newPage.html
+++ b/html/newPage.html
@@ -20,6 +20,7 @@
         <div class="reviews">(29,876 ratings)</div>
         <div class="bestseller">Bestseller</div> -->
     </div>
-<script src="/js/course.js"></script>
+<script src="../js/course.js"></script>
+<script src="../js/newPage.js"></script>
 </body>
 </html>
