--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <link rel="shortcut icon" href="/assets/u.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -28,7 +29,7 @@
           </div>
         </div>
         <div class="header__main">
-          <a href="#" class="header__link-pic">
+          <a href="./index.html" class="header__link-pic">
             <img
               src="../assets/course logo.svg"
               alt="alt"
@@ -36,7 +37,6 @@
             />
           </a>
           <a href="#" class="header__explore"> Explore </a>
-
           <input type="text" name="input" id="headerInput" />
           <ul class="header__menu">
             <li class="header__list">
@@ -51,11 +51,28 @@
           </ul>
           <i class="bi bi-list"></i>
           <div class="header__btns">
-            <button class="header__login">Log in</button>
-            <button class="header__signup">Sign up</button>
+            <button class="header__login1">Log in</button>
+            <button class="header__signup1">Sign up</button>
           </div>
         </div>
       </div>
+<div class="container">
+  <ul class="header__menu2 none-menu">
+    <li class="header__list">
+      <a href="#" class="header__link">Plans & Pricing</a>
+    </li>
+    <li class="header__list">
+      <a href="#" class="header__link">Udemy Business</a>
+    </li>
+    <li class="header__list">
+      <a href="#" class="header__link">Teach on Udemy</a>
+    </li>
+
+      <button class="header__login1">Log in</button>
+      <button class="header__signup1">Sign up</button>
+ 
+  </ul>
+</div>
     </header>
     <main>
       <section class="hero">
@@ -163,7 +180,6 @@
                 <del class="price__old">$74.99</del>
               </div>
               <button class="lessons__btn">Bestseller</button>
-
             </li>
             <li class="lessons__main_box">
               <img src="/assets/c-- man.png" alt="" class="lessons__img" />
@@ -186,7 +202,6 @@
                 <del class="price__old">$74.99</del>
               </div>
               <button class="lessons__btn">Bestseller</button>
-
             </li>
             <li class="lessons__main_box">
               <img src="/assets/js.png" alt="" class="lessons__img" />
@@ -208,8 +223,7 @@
                 <div class="price__now">$9.99</div>
                 <del class="price__old">$59.99</del>
               </div>
-                <button class="lessons__btn">Bestseller</button>
-
+              <button class="lessons__btn">Bestseller</button>
             </li>
             <li class="lessons__main_box">
               <img src="/assets/python.png" alt="" class="lessons__img" />
