--- a/html/signUp.html
+++ b/html/signUp.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-  
+    <div class="div_wrapper">
     <form id="signupForm">
-      <div class="div_wrapper">
       Name:
       <input id="name" type="text" />
       <div id="nameError" class="error"></div>
@@ -24,9 +23,12 @@
       <div id="confirmError" class="error"></div>
     
       <button type="submit" class="btn">Sign Up</button>
-    </div>
+   
+      <button class="homepage" type="button">Homepage</button>
     </form>
+    </div>
 
    <script src="../js/signUp.js"></script>
+   <script src="../js/homepage.js"></script>
   </body>
 </html>
