--- a/html/profile.html
+++ b/html/profile.html
@@ -174,7 +174,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="/assets/react.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -203,7 +203,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="/assets/node js.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -232,7 +232,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="/assets/3 1.png"
                 alt=""
                 class="courses__project-img"
               />
@@ -296,7 +296,7 @@
             </div>
             <div class="courses__project-box">
               <img
-                src="/assets/js bro.png"
+                src="/assets/css html.png"
                 alt=""
                 class="courses__project-img"
               />
