--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <header class="header">   
         <div class="header__wrapper">
             <div class="header__topColor">
-                <div class="container">
+                
                     <div class="`">
                         <p class="course-text">
                             <span class="course-spn"
@@ -54,7 +54,7 @@
                 </ul>
                 <div class="header__btns">
                     <button class="header__login">Log in</button>
-                    <button class="header__signup">Sign up</button>
+                    <a class="header__signup" href="./signUp.html">Sign up</a>
                     <button class="header__space-btn">A</button>
                 </div>
             </div>
@@ -491,7 +491,7 @@
               </ul>
             </div>
           </div>
-          <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
       </section>
 
@@ -750,7 +750,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conatiner">
+      <div class="container">
         <div class="footer__wrapper">
           <div class="footer__online-world">
             <div class="online-world-left">
