--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
                 <div class="header__btns">
                     <button class="header__login">Log in</button>
                     <a class="header__signup" href="./signUp.html">Sign up</a>
-                    <button class="header__space-btn">A</button>
+                    <a href="./premium_class.html" class="header__space-btn">Premium classes</a>
                 </div>
             </div>
         </div>
@@ -975,5 +975,6 @@
     <script src="/js/course.js"></script>
     <script src="/js/input.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/premium.js"></script>
 </body>
 </html>
