--- a/html/amin.html
+++ b/html/amin.html
@@ -739,7 +739,7 @@ and looks under the hood of React.</li>
   <div class="jonas-course-list">
     
     <div class="jonas-course-card">
-      <img src="/assets/assets/4.png" alt="JavaScript Course" class="jonas-course-img">
+      <img src="../851712_fc61_6.jpg.png" alt="JavaScript Course" class="jonas-course-img">
       <h3 class="jonas-course-title">The Complete JavaScript Course 2025: From Zero to Hero</h3>
       <p class="jonas-instructor-name">Jonas Schmedtmann</p>
       <div class="jonas-course-meta">
@@ -751,7 +751,7 @@ and looks under the hood of React.</li>
     </div>
 
     <div class="jonas-course-card">
-      <img src="/assets/assets/2.png" alt="Node Course" class="jonas-course-img">
+      <img src="../Background+Border.png" alt="Node Course" class="jonas-course-img">
       <h3 class="jonas-course-title">Node.js, Express, MongoDB & More: The Complete</h3>
       <p class="jonas-instructor-name">Jonas Schmedtmann</p>
       <div class="jonas-course-meta">
@@ -763,11 +763,44 @@ and looks under the hood of React.</li>
     </div>
 
     <div class="jonas-course-card">
-      <img src="/assets/assets/14.png" alt="HTML CSS Course" class="jonas-course-img">
+      <img src="/Background+Border.svg" alt="HTML CSS Course" class="jonas-course-img">
+      <h3 class="jonas-course-title">Build Responsive Real-World Websites with HTML and CSS</h3>
+      <p class="jonas-instructor-name">Jonas Schmedtmann</p>
+      <div class="jonas-course-meta">
+        <span class="jonas-rating">4.8 ⭐</span>
+        <span class="jonas-reviews">(135,513)</span>
+      </div>
+      <div class="jonas-course-details">37.5 total hours • 149 lectures • All Levels</div>
+      <div class="jonas-course-price">$9.99 <span class="jonas-price-old">$74.99</span></div>
+    </div>
+    <div class="jonas-course-card">
+      <img src="../4993934_0107_4.jpg.png" alt="HTML CSS Course" class="jonas-course-img">
       <h3 class="jonas-course-title">Build Responsive Real-World Websites with HTML and CSS</h3>
       <p class="jonas-instructor-name">Jonas Schmedtmann</p>
       <div class="jonas-course-meta">
         <span class="jonas-rating">4.7 ⭐</span>
+        <span class="jonas-reviews">(135,513)</span>
+      </div>
+      <div class="jonas-course-details">37.5 total hours • 149 lectures • All Levels</div>
+      <div class="jonas-course-price">$9.99 <span class="jonas-price-old">$74.99</span></div>
+    </div>
+    <div class="jonas-course-card">
+      <img src="/Background+Border.svg" alt="HTML CSS Course" class="jonas-course-img">
+      <h3 class="jonas-course-title">Build Responsive Real-World Websites with HTML and CSS</h3>
+      <p class="jonas-instructor-name">Jonas Schmedtmann</p>
+      <div class="jonas-course-meta">
+        <span class="jonas-rating">4.1 ⭐</span>
+        <span class="jonas-reviews">(135,513)</span>
+      </div>
+      <div class="jonas-course-details">37.5 total hours • 149 lectures • All Levels</div>
+      <div class="jonas-course-price">$9.99 <span class="jonas-price-old">$74.99</span></div>
+    </div>
+    <div class="jonas-course-card">
+      <img src="/Background+Border.svg" alt="HTML CSS Course" class="jonas-course-img">
+      <h3 class="jonas-course-title">Build Responsive Real-World Websites with HTML and CSS</h3>
+      <p class="jonas-instructor-name">Jonas Schmedtmann</p>
+      <div class="jonas-course-meta">
+        <span class="jonas-rating">4.5 ⭐</span>
         <span class="jonas-reviews">(135,513)</span>
       </div>
       <div class="jonas-course-details">37.5 total hours • 149 lectures • All Levels</div>
