--- a/html/amin.html
+++ b/html/amin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
@@ -1039,7 +1039,7 @@ and looks under the hood of React.</li>
         </div>
       </footer>
 
-    <script src="/js/course.js"></script>
-    <script src="/js/amin.js"></script>
+    <script src="../js/course.js"></script>
+    <script src="../js/amin.js"></script>
   </body>
 </html>
