--- a/html/detail.html
+++ b/html/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,8 +14,8 @@
       
     </main>
     <footer></footer>
-    <script src="/js/input.js"></script>
-    <script src="/js/product.js"></script>
-    <script src="/js/detail.js"></script>
+    <script src="../js/input.js"></script>
+    <script src="../js/product.js"></script>
+    <script src="../js/detail.js"></script>
 </body>
 </html>
