--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <link rel="shortcut icon" href="/assets/u.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="../assets/u.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -972,9 +972,9 @@
         </div>
       </div>
     </footer>
-    <script src="/js/course.js"></script>
-    <script src="/js/input.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/premium.js"></script>
+    <script src="../js/course.js"></script>
+    <script src="../js/input.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/premium.js"></script>
 </body>
 </html>
